--- a/application/index/view/Dlwz/echos.html
+++ b/application/index/view/Dlwz/echos.html
@@ -16,21 +16,21 @@
                 url: "{:url('index/Dlwz/index')}" ,//url
                 data: $('#form1').serialize(),
                 success: function (result) {
-                    console.log(typeof result);//打印服务端返回的数据(调试用)
-                    if(typeof result=="string"){
-                        alert(result);
+                    //console.log(typeof result);
+                   // console.log (result);
+                    console.log( result.status);//打印服务端返回的数据(调试用)
+                    if(result["status"]==0){
+                        alert(result["info"]);
                         $('#captchaImg').attr("src", "{:captcha_src()}"); 
-                    }else{
+                    }else if(result["status"]==1){
                         window.location.href = "{:url('index/Dlwz/home')}";
                     //document.write(result) ;
                 }
-                   
                 },
                 error : function() {
                     alert("异常！");
                 }
-        });
-           
+        });   
     }
    
     </script>
@@ -38,7 +38,6 @@
     <!-- 网页的具体内容 -->
 <body>
     <FORM FORM method="post" id="form1" onsubmit="return false" action="##" >
-    昵称：  <INPUT type="text" class="text" name="nickname"><br/>
     用户名：<INPUT type="text" class="text" name="username"><br/>
     密码：  <INPUT type="password" class="text" name="password"><br/>
     <div>
