初代目 新增注销功能

--- a/application/index/view/Dlwz/add.html
+++ b/application/index/view/Dlwz/add.html
@@ -35,7 +35,7 @@
 </head>
     <!-- 网页的具体内容 -->
 <body>
-    <FORM method="post" id="form1" onsubmit="return false" action="##" > <!----action="{:url('index/Dlwz/addinf')}"-->
+    <FORM method="post" id="form1" onsubmit="return false" action="##" align="center"> <!----action="{:url('index/Dlwz/addinf')}"-->
     昵称：  <INPUT type="text" class="text" name="nickname"><br/>
     用户名：<INPUT type="text" class="text" name="username"><br/>
     密码：  <INPUT type="password" class="text" name="password"><br/>
