--- a/application/index/view/Dlwz/home.html
+++ b/application/index/view/Dlwz/home.html
@@ -101,6 +101,9 @@
 				</tr>	
 				{/foreach}	
 			</table>
+			<FORM method="post" class="form" action="{:url('index/Dlwz/logout')}"  align="center">
+			<INPUT type="submit" class="btn" value=" 注销 " align="center">
+			</FORM>
 		</div>
 		<div id="div1" style="display:none"  align="center">
 			<INPUT id="backBtn" type="button" class="btn" value=" 返回 " ><br>
