初代目 翻页实现 ui改造中

--- a/application/index/view/Dlwz/home.html
+++ b/application/index/view/Dlwz/home.html
@@ -101,6 +101,7 @@
 				</tr>	
 				{/foreach}	
 			</table>
+			{$name->render()}
 			<FORM method="post" class="form" action="{:url('index/Dlwz/logout')}"  align="center">
 			<INPUT type="submit" class="btn" value=" 注销 " align="center">
 			</FORM>
