--- a/application/index/view/Dlwz/echos.html
+++ b/application/index/view/Dlwz/echos.html
@@ -4,6 +4,8 @@
 <head>
     <mate charset="utf-8">
     <title>第一个网页</title>
+    <link rel="stylesheet" href="/public/static/layui/css/layui.css">
+    <script src="/public/static/layui/layui.js"></script>
     <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js">
     </script>
     <script type="text/javascript">
@@ -34,21 +36,51 @@
     }
    
     </script>
+    <style>
+    *{margin:0;padding:0}
+    .absoluteCenter{ width:600px; height:400px;position:absolute;  left:50%; top:50%; margin-left: -300px; margin-top: -200px;  }
+    </style>
 </head>
     <!-- 网页的具体内容 -->
 <body>
-    <FORM FORM method="post" id="form1" onsubmit="return false" action="##" >
-    用户名：<INPUT type="text" class="text" name="username"><br/>
-    密码：  <INPUT type="password" class="text" name="password"><br/>
-    <div>
-         <input type="text" id="captcha" placeholder="验证码" name="captcha"/>
-         <!-- <span id="captchaChecked" style="display:none;color:green;font-weight:bold">√</span> -->
+    <div class="layui-body">
+        <div class="absoluteCenter">
+            <form class="layui-form" FORM method="post" id="form1" onsubmit="return false" action="##">
+                <div class="layui-form-item">
+                    <label class="layui-form-label">用户名</label>
+                    <div class="layui-input-block">
+                        <input type="text" name="username" required  lay-verify="required" placeholder="请输入标题" autocomplete="off" class="layui-input" style="width:200px" >
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">密码框</label>
+                    <div class="layui-input-inline">
+                        <input type="password" name="password" required lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input" style="width:200px">
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <label class="layui-form-label">验证码</label>
+                    <div>
+                        <input type="text" id="captcha" required lay-verify="required" placeholder="请输入验证码" name="captcha" style="width:200px ;height:38px" class="layui-input" />
+                    </div>
+                    <label class="layui-form-label"></label>
+                    <div class="layui-input-inline">
+                            <img class="captcha_img"  id="captchaImg" alt="点击刷新验证码" src="{:captcha_src()}">
+                    </div>
+                </div>
+                <input type="hidden" name="__token__" value="{$Request.token}" />
+                <div class="layui-form-item">
+                    <div class="layui-input-block">
+                        <button class="layui-btn layui-btn-radius"   onclick='login()'>立即提交</button>
+                        <button type="reset" class="layui-btn layui-btn-primary layui-btn-radius">重置</button>
+                    </div>
+                </div>
+            </form>  
+        </div>
+            <!-- 内容主体区域 -->
+        
     </div>
-    <div >
-        <img class="captcha_img"  id="captchaImg" alt="点击刷新验证码" src="{:captcha_src()}">
-    </div>
-    <input type="hidden" name="__token__" value="{$Request.token}" />
-    <INPUT type="button" class="btn" value=" 提交 "  onclick='login()'>
-    </FORM>
+
+            
 </body>
 </html>
