--- a/application/index/view/Index/cs.html
+++ b/application/index/view/Index/cs.html
@@ -7,18 +7,45 @@
   <link rel="stylesheet" href="/public/static/layui/css/layui.css">
 </head>
 <body>
- 
-<!-- 你的HTML代码 -->
+  <form class="layui-form" FORM method="post" id="form1" onsubmit="return false" action="##">
+    <div class="layui-form-item">
+      <label class="layui-form-label">用户名</label>
+      <div class="layui-input-block">
+        <input type="text" name="username" required  lay-verify="required" placeholder="请输入标题" autocomplete="off" class="layui-input" style="width:200px" >
+      </div>
+    </div>
+    <div class="layui-form-item">
+      <label class="layui-form-label">密码框</label>
+      <div class="layui-input-inline">
+        <input type="password" name="password" required lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input" style="width:200px">
+      </div>
+    </div>
+      <div class="layui-form-item">
+        <label class="layui-form-label">验证码</label>
+        <div>
+          <input type="text" id="captcha" placeholder="验证码" name="captcha" style="width:200px"/>
+        </div>
+      </div>
+      <input type="hidden" name="__token__" value="{$Request.token}" />
+      <div class="layui-form-item">
+        <div class="layui-input-block">
+          <button class="layui-btn" lay-submit lay-filter="formDemo"  onclick='login()'>立即提交</button>
+          <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+        </div>
+      </div>
+    </form>
+
+
  
 <script src="/public/static/layui/layui.js"></script>
 <script>
 //一般直接写在一个js文件中
-layui.use(['layer', 'form'], function(){
-  var layer = layui.layer,
-  form = layui.form;
+// layui.use(['layer', 'form'], function(){
+//   var layer = layui.layer,
+//   form = layui.form;
   
-  layer.msg('Hello World');
-});
+//   //layer.msg('Hello World');
+// });
 </script> 
 </body>
 </html>
