--- a/application/index/view/User/update.html
+++ b/application/index/view/User/update.html
@@ -1,8 +1,101 @@
-<html>
-<head>
-<title>hello </title>
-</head>
-<body>
-    
-</body>
-</html>
+<body class="layui-layout-body">
+		<div class="layui-layout layui-layout-admin">
+			<div class="layui-header">
+				<div class="layui-logo">layui 后台布局</div>
+					<!-- 头部区域（可配合layui已有的水平导航） -->
+					<ul class="layui-nav layui-layout-left">
+						<li class="layui-nav-item"><a href="">控制台</a></li>
+						<li class="layui-nav-item"><a href="">商品管理</a></li>
+						<li class="layui-nav-item"><a href="">用户</a></li>
+						<li class="layui-nav-item">
+							<a href="javascript:;">其它系统</a>
+							<dl class="layui-nav-child">
+								<dd><a href="">邮件管理</a></dd>
+								<dd><a href="">消息管理</a></dd>
+								<dd><a href="">授权管理</a></dd>
+							</dl>
+						</li>
+					</ul>
+					<ul class="layui-nav layui-layout-right">
+						<li class="layui-nav-item">
+							<a href="javascript:;">
+							<img src="http://t.cn/RCzsdCq" class="layui-nav-img">
+							admin
+							</a>
+							<dl class="layui-nav-child">
+							  <dd><a href="">基本资料</a></dd>
+							  <dd><a href="">安全设置</a></dd>
+							</dl>
+						</li>
+						<li class="layui-nav-item"><a href="{:url('index/Dlwz/logout')}">注销</a></li>
+					</ul>
+			</div>
+					  
+			<div class="layui-side layui-bg-black">
+				<div class="layui-side-scroll">
+					<!-- 左侧导航区域（可配合layui已有的垂直导航） -->
+					<ul class="layui-nav layui-nav-tree"  lay-filter="test">
+						<li class="layui-nav-item layui-nav-itemed">
+							<a class="" href="javascript:;">所有商品</a>
+							<dl class="layui-nav-child">
+								<dd><a href="javascript:;">列表一</a></dd>
+								<dd><a href="javascript:;">列表二</a></dd>
+								<dd><a href="javascript:;">列表三</a></dd>
+								<dd><a href="">超链接</a></dd>
+							</dl>
+						</li>
+						<li class="layui-nav-item">
+							<a href="javascript:;">解决方案</a>
+							<dl class="layui-nav-child">
+								<dd><a href="javascript:;">列表一</a></dd>
+								<dd><a href="javascript:;">列表二</a></dd>
+								<dd><a href="">超链接</a></dd>
+							</dl>
+						</li>
+					</ul>
+				</div>
+			</div>
+					
+			<div class="layui-body">
+				<!-- 内容主体区域 -->
+				<div style="padding: 15px;padding-left: 50px;padding-right: 450px">
+					<div class="layui-body">
+						<div class="absoluteCenter">
+							<form class="layui-form" FORM method="post" id="form1" onsubmit="return false" action="##">
+								<span> id：{$InfoId}</span><br/>
+								<div class="layui-form-item">
+									<label class="layui-form-label">昵称</label>
+									<div class="layui-input-block">
+										<input type="text" name="nickname" required  lay-verify="required" placeholder="{$InfoNn}" autocomplete="off" class="layui-input" style="width:200px" >
+									</div>
+								</div>
+								<div class="layui-form-item">
+									<label class="layui-form-label">用户名</label>
+									<div class="layui-input-block">
+										<input type="text" name="username" required  lay-verify="required" placeholder="{$InfoUn}" autocomplete="off" class="layui-input" style="width:200px" >
+									</div>
+								</div>
+								<div class="layui-form-item">
+									<label class="layui-form-label">密码框</label>
+									<div class="layui-input-inline">
+										<input type="password" name="password" required lay-verify="required" placeholder="{$InfoPw}" autocomplete="off" class="layui-input" style="width:200px">
+									</div>
+								</div>
+								<input type="hidden" name="id" value="{$InfoId}" /> 
+								<input type="hidden" name="__token__" value="{$Request.token}" />
+								<div class="layui-form-item">
+									<div class="layui-input-block">
+										<button class="layui-btn layui-btn-radius"   onclick='login("{$InfoId}")'>立即提交</button>
+										<button type="reset" class="layui-btn layui-btn-primary layui-btn-radius">重置</button>
+									</div>
+								</div>
+							</form>  
+						</div>
+					</div>         
+				</div>
+			
+			
+			</div>
+		</div>
+	</body>
+	
