--- a/application/index/view/Dlwz/echos.html
+++ b/application/index/view/Dlwz/echos.html
@@ -5,9 +5,8 @@
     <mate charset="utf-8">
     <title>第一个网页</title>
     <link rel="stylesheet" href="/public/static/layui/css/layui.css">
+    <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
     <script src="/public/static/layui/layui.js"></script>
-    <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js">
-    </script>
     <script type="text/javascript">
    
     login = function (){
@@ -25,7 +24,7 @@
                         alert(result["info"]);
                         $('#captchaImg').attr("src", "{:captcha_src()}"); 
                     }else if(result["status"]==1){
-                        window.location.href = "{:url('index/Dlwz/home')}";
+                        window.location.href = "{:url('index/Dlwz/home')}";//?id="+result["info"];
                     //document.write(result) ;
                 }
                 },
