初代目 粗糙的权限添加完成

--- a/application/index/view/Dlwz/add.html
+++ b/application/index/view/Dlwz/add.html
@@ -54,13 +54,13 @@
                             <div class="layui-form-item">
                                 <label class="layui-form-label">昵称</label>
                                 <div class="layui-input-block">
-                                    <input type="text" name="nickname"    placeholder="请输入标题" autocomplete="off" class="layui-input" style="width:200px" >
+                                    <input type="text" name="nickname"    placeholder="请输入昵称" autocomplete="off" class="layui-input" style="width:200px" >
                                 </div>
                             </div>
                             <div class="layui-form-item">
                                 <label class="layui-form-label">用户名</label>
                                 <div class="layui-input-block">
-                                    <input type="text" name="username"    placeholder="请输入标题" autocomplete="off" class="layui-input" style="width:200px" >
+                                    <input type="text" name="username"    placeholder="请输入用户名" autocomplete="off" class="layui-input" style="width:200px" >
                                 </div>
                             </div>
                             <div class="layui-form-item">
