--- a/application/index/view/Dlwz/home.html
+++ b/application/index/view/Dlwz/home.html
@@ -35,6 +35,16 @@ ul.pagination li span {
   </style>
   <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
   <script src="/public/static/layui/lay/modules/layer.js"></script>
+  <script>
+    $(document).ready(function(){
+
+      $("[href$='.jpg']").hide();
+ 
+ 
+    });
+ 
+  </script>
+
   <script type="text/javascript">
    
   login = function (option){
@@ -100,19 +110,7 @@ ul.pagination li span {
       <div class="layui-header">
         <div class="layui-logo">layui 后台布局</div>
         <!-- 头部区域（可配合layui已有的水平导航） -->
-        <ul class="layui-nav layui-layout-left">
-          <li class="layui-nav-item"><a href="">控制台</a></li>
-          <li class="layui-nav-item"><a href="">商品管理</a></li>
-          <li class="layui-nav-item"><a href="">用户</a></li>
-          <li class="layui-nav-item">
-            <a href="javascript:;">其它系统</a>
-            <dl class="layui-nav-child">
-              <dd><a href="">邮件管理</a></dd>
-              <dd><a href="">消息管理</a></dd>
-              <dd><a href="">授权管理</a></dd>
-            </dl>
-          </li>
-        </ul>
+
         <ul class="layui-nav layui-layout-right">
           <li class="layui-nav-item">
             <a href="javascript:;">
@@ -133,20 +131,20 @@ ul.pagination li span {
           <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
           <ul class="layui-nav layui-nav-tree"  lay-filter="test">
             <li class="layui-nav-item layui-nav-itemed">
-              <a class="" href="javascript:;">所有商品</a>
+              <a class="" href="javascript:;">所有页面</a>
               <dl class="layui-nav-child">
-                <dd><a href="javascript:;">列表一</a></dd>
-                <dd><a href="javascript:;">列表二</a></dd>
-                <dd><a href="javascript:;">列表三</a></dd>
-                <dd><a href="">超链接</a></dd>
+                
+                <dd><a href="/application/index/{$msg.lv3}">列表一</a></dd>
+                <dd><a href="/application/index/{$msg.lv3}">列表二</a></dd>
+                <dd><a href="/application/index/{$msg.lv3}">列表三</a></dd>
+                
               </dl>
             </li>
             <li class="layui-nav-item">
-              <a href="javascript:;">解决方案</a>
+              <a href="javascript:;">权限管理</a>
               <dl class="layui-nav-child">
-                <dd><a href="javascript:;">列表一</a></dd>
-                <dd><a href="javascript:;">列表二</a></dd>
-                <dd><a href="">超链接</a></dd>
+                <dd><a href="/application/index/{$msg.lv1}">用户管理</a></dd>
+                <dd><a href="/application/index/{$msg.lv2}">权限管理</a></dd>
               </dl>
             </li>
           </ul>
